Casi todo hasta hoy

--- a/galois/galois.tex
+++ b/galois/galois.tex
@@ -235,6 +235,7 @@ Revisión del \today $ $ a las \currenttime.
 \tableofcontents
 \part{Primer parcial}
 \input{input/1-anillos}
+\input{input/2-extensiones.tex}
 
 \part{Apéndices}
 
