--- a/galois/input/1-anillos.tex
+++ b/galois/input/1-anillos.tex
@@ -201,10 +201,10 @@ Vamos a considerar además el concepto de anillo de polinomios:
 \end{dfn}
 
 \begin{obs}
-    Sea $R$ un anillo, denotamos al ideal generado por $a \in R$ como:
-    $$
+    Sea $R$ un anillo, denotamos al ideal generado por $a \in R$ como
+    $
         \gen{a}
-    $$
+    $
 \end{obs}
 
 \begin{pro}[Ideal propio]
@@ -347,7 +347,7 @@ Vamos a considerar además el concepto de anillo de polinomios:
     \end{enumerate}
 \end{proof}
 
-\section{Homomorfismos}
+\section{Homomorfismos} \label{section:homomorfismos}
 
 \begin{dfn}[Homomorfismo de anillos]
     Sean $R, S$ anillos, $\varphi: R \to S$ es un \textbf{homomorfismo de anillos} si:\\
@@ -721,7 +721,7 @@ Vamos a considerar además el concepto de anillo de polinomios:
     Como es un polinomio de grado $3$ sin raíces, es irreducible en $\Z_2[x]$ y por tanto es reducible en $\Q[x]$.
 \end{ex}
 
-\begin{thm}[Criterio de Einsestein]
+\begin{thm}[Criterio de Einsestein]\label{thm:Einsestein}
     Sea $f(x) = a_0 + a_1 x + \ldots + a_n x^n \in \Z[x]$. Si existe un primo $p$ tal que:
     \begin{enumerate}
         \item $p \not \divides a_n$.
