errata y clase del 15/06

--- a/galois/input/1-anillos.tex
+++ b/galois/input/1-anillos.tex
@@ -695,7 +695,7 @@ Vamos a considerar además el concepto de anillo de polinomios:
 \section{Criterios de irreducibilidad}
 
 \begin{lm}[de Gauss]
-    Sea $f(x) \in \Z[x]$ un polinomio con $\delta(f) \leq 2$, entonces:
+    Sea $f(x) \in \Z[x]$ un polinomio con $\delta(f) \geq 2$, entonces:
     $$
         f(x) \text{ irreducible en } \Z[x] \implies f(x) \text{ irreducible en } \Q(x)
     $$
