--- a/galois/input/2-extensiones.tex
+++ b/galois/input/2-extensiones.tex
@@ -311,3 +311,44 @@ En ocasiones querremos saber como extender un isomorfismo de cuerpos a una exten
         |L(\alpha):L| = \delta(q(x)) \leq \delta(p(x)) = |K(\alpha):K|
     $$
 \end{ex}
+
+\begin{ex}[H2.11]
+    Sea $E/K$ una extensión. Demuestra:
+    \begin{enumerate}
+        \item Si $|E/K| = p$ con $p$ primo, demuestra que no hay subcuerpos intermedios.\\\\
+        Por el teorema de transitividad de grados (teorema \ref{thm:transgr}), sabemos que $|E:K| = |E:L| \cdot |L:K| = p \implies |E:L| = 1 \lor |L:K| = 1$, y por tanto $E = L \lor L = K$.
+
+        \item Sea $|E:K| = p$ con $p$ primo, entonces $E/K$ es simple.\\\\
+        Consideramos $L = K(\alpha)$ con $\alpha \in E, \alpha \not in K$, además $K(\alpha) \neq K$ y por tanto (por el primer apartado) $L = E = K(\alpha)$ y es simple ya que $K(\alpha)$ lo es.
+
+        \item Supongamos $\alpha \in E$ tal que $Irr(K, \alpha) = x^3 + x - 1$. Queremos calcular $Irr(K, \alpha^2)$. Como sabemos que $K(\alpha)/K$ tiene grado $3$, y por el apartado siguiente, $K(\alpha) = K(\alpha^2)$, entonces por el teorema \ref{thm:elemalg}, $\delta(Irr(K, \alpha^2))=2$.\\\\
+        Entonces:
+        $$
+            \alpha^3 + \alpha^2 = 1 \iff \alpha^6 + 2\alpha^4 + \alpha^2 - 1 = 0
+        $$
+        Sea $\beta = \alpha^2$, entonces se satisface que:
+        $$
+            \beta^3 + 2\beta^2 + \beta - 1 = 0
+        $$
+        y con ello hemos hallado el polinomio irreducible que buscábamos.
+
+        \item Si $\alpha \in E$, con $|K(\alpha):K| = n$ impar, calcula $|K(\alpha^2):K|$.\\\\
+        Como $n$ es impar sabemos que $\alpha^2 \in K(\alpha)$ y por tanto $K(\alpha^2) = K(\alpha)$.\\
+
+        \item Sea $K \subseteq L_1, L_2 \subseteq E$ dos cuerpos intermedios de grado coprimos sobre $K$ demuestra que $L_1 \cap L_2 = K$.\\\\
+        Se considera el cuerpo $L_1 \cap L_2$. Sea $d = |L_1 \cap L_2 / K$, $n = |L_1/K|$ y $m=|L_2/K$. Entonces por el teorema \ref{thm:transgr}, $d \divides n$ y $d \divides m$ con $n, m$ coprimos, por tanto $d = 1$ y $\L_1 \cap L_2 = K$.
+    \end{enumerate}
+\end{ex}
+
+\begin{ex}[H2.12]
+    Sea $E/K$ una extensión, y sean $a, b \in E$ algebraicos con $|K(a):K| = n$, $|K(b):K| = m$. Prueba que:
+
+    \begin{enumerate}
+        \item $|K(a, b) : K(b) \leq n$.\\\\
+        Mirar el ejercicio H2.10
+
+        \item Sean $n$ y $m$ son coprimos, entonces $K(a)\cup K(b) = K$ y $|K(a, b):K|=nm$. Deduce que $Irr(K, a) = Irr(K(b), a)$.\\\\
+        Mirar ejercicio H2.11\\
+        \item Calcula $Irr(\Q, \alpha)$ con $\alpha = \sqrt{3} + \sqrt[3]{2}$
+    \end{enumerate}
+\end{ex}
