--- a/galois/galois.tex
+++ b/galois/galois.tex
@@ -236,6 +236,8 @@ Revisión del \today $ $ a las \currenttime.
 \part{Primer parcial}
 \input{input/1-anillos}
 \input{input/2-extensiones.tex}
+\part{Segundo parcial}
+\input{input/3-ext-galois.tex}
 
 \part{Apéndices}
 
